carvel/bundle/config/upstream/kubeflow/common/istio-1-17/kubeflow-istio-resources/base/install_order.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
  annotations:
    kapp.k14s.io/change-group: apps.kubeflow.org/order-7
    kapp.k14s.io/change-rule: upsert after upserting apps.kubeflow.org/order-6
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
